--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,13 @@
 pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
 plugins { id("com.facebook.react.settings") }
 extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositories {
+        google()
+        mavenCentral()
+maven { url 'https://maven.mappls.com/repository/mappls/' }    }
+}
 rootProject.name = 'MMIRouteTracking'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
